--- a/pages/store.html
+++ b/pages/store.html
@@ -70,7 +70,7 @@
         <h2 class="text-2xl font-medium text-green text-center">Últimos orígenes</h2>
         <div class="flex justify-between items-center flex-wrap gap-6">
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/costaRicaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Tarrazú</p>
@@ -80,7 +80,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia Los Naranjos</p>
@@ -90,7 +90,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/laosBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Laos Amanecer</p>
@@ -100,7 +100,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/etiopiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Yrgacheff</p>
@@ -110,7 +110,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/Kenia-Nd.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Kenia Ndunduri</p>
@@ -120,7 +120,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/EtiopiaSidoma.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Sidamo</p>
@@ -130,7 +130,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/CostaRicaMonteBello.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Monte Bello</p>
@@ -140,7 +140,7 @@
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
             </article>
             <article
-                class="group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
+                class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia La Casita</p>
