--- a/pages/cart.html
+++ b/pages/cart.html
@@ -66,13 +66,16 @@
     <!-- -----------------NAVBAR-------------- -->
     <!-- -----------------CART-------------- -->
     <section class="px-12 flex flex-col gap-8">
-        <h2 class="text-center text-green font-medium text-2xl mt-10">Cesta(<span>0</span>)</h2>
+        <h2 class="text-center text-green font-medium text-2xl mt-10">Cesta(<span id="counter">0</span>)</h2>
         <div class="container flex justify-between">
             <div class="flex flex-col w-full px-6">
                 <div class="flex flex-col gap-6">
                     <p class="font-semibold text-lg">Productos</p>
-                    <div class="flex flex-col gap-6">
-                        <div class="flex justify-between items-center gap-6">
+                    <div class="flex flex-col gap-6" id="container">
+                        <div class="self-center" id="empty">
+                            <p >No tienes productos en tu cesta</p>
+                        </div>
+                        <!-- <div class="flex justify-between items-center gap-6">
                             <div class="flex gap-7">
                                 <div class="flex gap-3.5 items-center">
                                     <img src="/assets/icons/minus.png" alt="" class="w-3 ">
@@ -88,8 +91,8 @@
                                 </div>
                             </div>
                             <p class="font-semibold text-lg">9,00€</p>
-                        </div>
-                        <div class="w-full h-px bg-grey opacity-10"></div>
+                        </div> -->
+                        <!-- <div class="w-full h-px bg-grey opacity-10"></div> -->
                     </div>
                 </div>
                 <div class="flex flex-col gap-6">
