Cart Logic Updates

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <img src="assets/coffe/costaRicaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Tarrazú</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -128,7 +128,7 @@
                 <img src="assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia Los Naranjas</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -138,7 +138,7 @@
                 <img src="assets/coffe/laosBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Laos Amanecer</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -148,7 +148,7 @@
                 <img src="assets/coffe/etiopiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Yrgacheff</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
