--- a/pages/store.html
+++ b/pages/store.html
@@ -74,7 +74,7 @@
                 <img src="../assets/coffe/costaRicaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Tarrazú</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -84,7 +84,7 @@
                 <img src="../assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia Los Naranjos</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -94,7 +94,7 @@
                 <img src="../assets/coffe/laosBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Laos Amanecer</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -104,7 +104,7 @@
                 <img src="../assets/coffe/etiopiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Yrgacheff</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -114,7 +114,7 @@
                 <img src="../assets/coffe/Kenia-Nd.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Kenia Ndunduri</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>15</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -124,7 +124,7 @@
                 <img src="../assets/coffe/EtiopiaSidoma.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Etiopía Sidamo</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>17</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -134,7 +134,7 @@
                 <img src="../assets/coffe/CostaRicaMonteBello.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Costa Rica Monte Bello</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>12</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
@@ -144,7 +144,7 @@
                 <img src="../assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
                     <p>Colombia La Casita</p>
-                    <p class="font-normal">9,00€</p>
+                    <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
                     class=" p-2 font-semibold rounded bg-green opacity-70 group-hover:opacity-100 text-sm text-white">Añadir</button>
