--- a/pages/cart.html
+++ b/pages/cart.html
@@ -73,7 +73,7 @@
                     <p class="font-semibold text-lg">Productos</p>
                     <div class="flex flex-col gap-6" id="container">
                         <div class="self-center" id="empty">
-                            <p >No tienes productos en tu cesta</p>
+                            <p>No tienes productos en tu cesta</p>
                         </div>
                         <!-- <div class="flex justify-between items-center gap-6">
                             <div class="flex gap-7">
@@ -97,26 +97,33 @@
                 </div>
                 <div class="flex flex-col gap-6">
                     <p class="font-semibold text-lg">Seleccionar envio</p>
-                    <div class="flex items-center gap-6">
-                        <input class="accent-green w-3.5 h-3.5" type="radio" id="free" name="envio">
-                        <label for="free">
-                            <div class="flex flex-col gap-1">
-                                <p class="font-semibold text-sm">Envio 5-7 dias</p>
-                                <p class="text-sm">Opción estándar sin seguimiento</p>
-                            </div>
-                        </label>
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center gap-6">
+                            <input class="accent-green w-3.5 h-3.5 envio" type="radio" id="free" name="envio" value="0">
+                            <label for="free">
+                                <div class="flex flex-col gap-1">
+                                    <p class="font-semibold text-sm">Envio 5-7 dias</p>
+                                    <p class="text-sm">Opción estándar sin seguimiento</p>
+                                </div>
+                            </label>
+                        </div>
+                        <p class="font-semibold text-lg">GRATIS</p>
                     </div>
                     <div class="w-full h-px bg-grey opacity-10"></div>
-                    <div class="flex items-center gap-6">
-                        <input class="accent-green w-3.5 h-3.5" type="radio" id="payment" name="envio">
-                        <label for="payment">
-                            <div class="flex flex-col gap-1">
-                                <p class="font-semibold text-sm">Envío urgente 24h</p>
-                                <p class="text-sm">Recibe tu pedido en las siguientes 24h (Para pedidos realizados antes
-                                    de
-                                    las 13:00).</p>
-                            </div>
-                        </label>
+                    <div class="flex justify-between items-center">
+                        <div class="flex items-center gap-6">
+                            <input class="accent-green w-3.5 h-3.5 envio" type="radio" id="payment" name="envio" value="9">
+                            <label for="payment">
+                                <div class="flex flex-col gap-1">
+                                    <p class="font-semibold text-sm">Envío urgente 24h</p>
+                                    <p class="text-sm">Recibe tu pedido en las siguientes 24h (Para pedidos realizados
+                                        antes
+                                        de
+                                        las 13:00).</p>
+                                </div>
+                            </label>
+                        </div>
+                        <p class="font-semibold text-lg">9,00€</p>
                     </div>
                 </div>
             </div>
@@ -125,16 +132,16 @@
                 <div class="w-full h-px bg-grey opacity-10"></div>
                 <div class="flex justify-between items-center">
                     <p class="text-sm">SUBTOTAL</p>
-                    <p class="text-sm font-semibold">18,00€</p>
+                    <p class="text-sm font-semibold" id="subtotal"></p>
                 </div>
                 <div class="flex justify-between items-center">
                     <p class="text-sm">ENVÍO</p>
-                    <p class="text-sm font-semibold">GRATIS</p>
+                    <p class="text-sm font-semibold" id="envio"></p>
                 </div>
                 <div class="w-[336px] h-px bg-grey opacity-10"></div>
                 <div class="flex justify-between items-center">
                     <p class="text-sm font-semibold">TOTAL</p>
-                    <p class="text-sm font-semibold">18,00€</p>
+                    <p class="text-sm font-semibold" id="total"></p>
                 </div>
                 <p class="self-end text-xs text-grey">Incluye 3,78€ de IVA</p>
                 <div class="flex justify-center items-center gap-10">
