--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <button class="py-3 px-6 bg-grey rounded-[5px]">Iniciar sesión</button>
         </div>
-        <a href="cart.html">
+        <a href="/pages/cart.html">
             <div class="flex items-center gap-2">
                 <img src="/assets/icons/bolsa.png" alt="" class="w-6 h-6">
                 <div id="counterTop" class="w-6 h-6 rounded-full flex justify-center items-center bg-grey text-xs">0</div>
@@ -134,7 +134,7 @@
                 class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="assets/coffe/colombiaBag.png" alt="">
                 <div class="flex flex-col justify-center items-center gap-3 font-semibold text-sm">
-                    <p>Colombia Los Naranjas</p>
+                    <p>Colombia Los Naranjos</p>
                     <p class="font-normal"><span>9</span>,00€</p>
                 </div>
                 <button
