--- a/pages/store.html
+++ b/pages/store.html
@@ -75,7 +75,7 @@
     <!-- -----------------COFFES-------------- -->
     <section class="flex flex-col p-10 gap-10 justify-center " id="news">
         <h2 class="text-2xl font-medium text-green text-center">Últimos orígenes</h2>
-        <div class="flex justify-between items-center flex-wrap gap-6">
+        <div class="flex justify-center items-center flex-wrap gap-6">
             <article
                 class="coffe group flex flex-col items-center gap-6 p-6 border border-taupe rounded-lg shadow-md hover:bg-taupe">
                 <img src="../assets/coffe/costaRicaBag.png" alt="">
