--- a/pages/cart.html
+++ b/pages/cart.html
@@ -100,7 +100,7 @@
                         <!-- <div class="w-full h-px bg-grey opacity-10"></div> -->
                     </div>
                 </div>
-                <div class="flex flex-col gap-6">
+                <div class="flex flex-col gap-6" id="envioDiv">
                     <p class="font-semibold text-lg">Seleccionar envio</p>
                     <div class="flex items-center justify-between">
                         <div class="flex items-center gap-6">
