--- a/pages/store.html
+++ b/pages/store.html
@@ -67,7 +67,7 @@
         <a href="cart.html">
             <div class="flex items-center gap-2">
                 <img src="/assets/icons/bolsa.png" alt="" class="w-6 h-6">
-                <div id="counterTop" class="w-6 h-6 rounded-full flex justify-center items-center bg-grey text-xs">0</div>
+                <div id="counterTop" class="w-6 h-6 rounded-full flex justify-center items-center bg-grey text-xs hidden">0</div>
             </div>
         </a>
     </nav>
