--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a href="/pages/cart.html">
             <div class="flex items-center gap-2">
                 <img src="/assets/icons/bolsa.png" alt="" class="w-6 h-6">
-                <div id="counterTop" class="w-6 h-6 rounded-full flex justify-center items-center bg-grey text-xs">0</div>
+                <div id="counterTop" class="w-6 h-6 rounded-full flex justify-center items-center bg-grey text-xs hidden"></div>
             </div>
         </a>
     </nav>
