--- a/pages/cart.html
+++ b/pages/cart.html
@@ -72,7 +72,7 @@
     <!-- -----------------CART-------------- -->
     <section class="px-12 flex flex-col gap-8 min-h-[90vh] mb-40">
         <h2 class="text-center text-green font-medium text-2xl mt-10">Cesta(<span id="counter">0</span>)</h2>
-        <div class="container flex justify-between">
+        <div class="flex justify-between">
             <div class="flex flex-col w-full px-6">
                 <div class="flex flex-col gap-6">
                     <p class="font-semibold text-lg">Productos</p>
@@ -80,7 +80,7 @@
                         <div class="self-center" id="empty">
                             <p>No tienes productos en tu cesta</p>
                         </div>
-                        <!-- <div class="flex justify-between items-center gap-6">
+                        <!-- <div class="flex justify-between items-center gap-6 border">
                             <div class="flex gap-7">
                                 <div class="flex gap-3.5 items-center">
                                     <img src="/assets/icons/minus.png" alt="" class="w-3 ">
@@ -100,7 +100,7 @@
                         <!-- <div class="w-full h-px bg-grey opacity-10"></div> -->
                     </div>
                 </div>
-                <div class="flex flex-col gap-6" id="envioDiv">
+                <div class="flex flex-col gap-6 mt-6" id="envioDiv">
                     <p class="font-semibold text-lg">Seleccionar envio</p>
                     <div class="flex items-center justify-between">
                         <div class="flex items-center gap-6">
@@ -137,16 +137,16 @@
                 <div class="w-full h-px bg-grey opacity-10"></div>
                 <div class="flex justify-between items-center">
                     <p class="text-sm">SUBTOTAL</p>
-                    <p class="text-sm font-semibold" ><span id="subtotal">0</span>,00€</p>
+                    <p class="text-sm font-semibold" ><span id="subtotal">0.00</span>€</p>
                 </div>
                 <div class="flex justify-between items-center">
                     <p class="text-sm">ENVÍO</p>
-                    <p class="text-sm font-semibold" id="envio">GRATIS</p>
+                    <p class="text-sm font-semibold" id="envio">0€</p>
                 </div>
                 <div class="w-[336px] h-px bg-grey opacity-10"></div>
                 <div class="flex justify-between items-center">
                     <p class="text-sm font-semibold">TOTAL</p>
-                    <p class="text-sm font-semibold" ><span id="total">0</span>,00€</p>
+                    <p class="text-sm font-semibold" ><span id="total">0.00</span>€</p>
                 </div>
                 <p class="self-end text-xs text-grey">Incluye 3,78€ de IVA</p>
                 <div class="flex justify-center items-center gap-10">
